fix: Table header and rows cells not being aligned

--- a/styles/less/components/application.less
+++ b/styles/less/components/application.less
@@ -463,6 +463,7 @@
 					color: var(--color-text-light-highlight);
 					display: flex;
 					font-weight: bold;
+					gap: 4px;
 					overflow: hidden;
 					padding: 4px;
 					scrollbar-gutter: stable;
